--- a/React/Cosmic-App/package.json
+++ b/React/Cosmic-App/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "vite": "^5.4.10"
-  }
+  },
+  "homepage":"https://cosmicoccasions.vercel.app/"
 }
 
